--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,38 +17,52 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/login_et"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/login_til"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:background="@drawable/et_background"
-        android:hint="@string/login_hint"
-        android:importantForAutofill="no"
-        android:inputType="phone"
-        android:paddingStart="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/enter_tv" />
+        app:prefixText="+7"
+        app:layout_constraintTop_toBottomOf="@+id/enter_tv">
 
-    <EditText
-        android:id="@+id/password_et"
+        <EditText
+            android:id="@+id/login_et"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/et_background"
+            android:hint="@string/login_hint"
+            android:inputType="phone"
+            android:paddingStart="20dp"
+            tools:ignore="RtlSymmetry"
+            android:importantForAutofill="no" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/password_til"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:background="@drawable/et_background"
-        android:hint="@string/password_hint"
-        android:importantForAutofill="no"
-        android:inputType="textPassword"
-        android:maxLength="255"
-        android:paddingStart="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/login_et"
-        tools:ignore="RtlSymmetry" />
+        app:layout_constraintTop_toBottomOf="@+id/login_til">
+
+        <EditText
+            android:id="@+id/password_et"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/et_background"
+            android:hint="@string/password_hint"
+            android:inputType="textPassword"
+            android:maxLength="255"
+            android:paddingStart="20dp"
+            tools:ignore="RtlSymmetry"
+            android:importantForAutofill="no" />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/black"
-        android:text="@string/enter_btn"
         android:onClick="login"
+        android:text="@string/enter_btn"
         app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
