--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -42,6 +42,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        app:passwordToggleEnabled="true"
         app:layout_constraintTop_toBottomOf="@+id/login_til">
 
         <EditText
